# rust_axum_test_automation

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.test  docker-compose.test.yml  docker-compose.yml  local_test.sh  run_test.ps1  run_test.sh
db/: postgresql.conf
db/init/: init.sql
src/: main.rs
src/config/: aws.rs  database.rs  jwt.rs
src/domain/: mod.rs
src/domain/auth/: mod.rs  route.rs
src/domain/auth/handler/: login.rs  mod.rs  refresh.rs  signup.rs
src/domain/auth/usecase/: login.rs  mod.rs  refresh.rs  signup.rs
src/domain/auth/utils/: jwt.rs
src/domain/book/: entity.rs  handler.rs  mod.rs  repository.rs  route.rs  usecase.rs
src/domain/book/dto/: mod.rs  request.rs
src/domain/book/handler/: create.rs  delete.rs  mod.rs  read.rs  read_type.rs  update.rs
src/domain/book/repository/: delete.rs  get_book.rs  get_book_type.rs  mod.rs  repository_impl.rs  save.rs  update.rs
src/domain/book/usecase/: create.rs  delete.rs  mod.rs  read.rs  read_type.rs  update.rs  usecase_impl.rs
src/domain/category/: entity.rs  mod.rs  route.rs
src/domain/category/dto/: request.rs
src/domain/category/handler/: create_base.rs  create_sub.rs  delete_base.rs  delete_sub.rs  mod.rs  read_base.rs  read_sub.rs  update_base.rs  update_sub.rs
src/domain/category/repository/: delete_base.rs  delete_sub.rs  get_base.rs  get_sub.rs  mod.rs  save_base.rs  save_sub.rs  update_base.rs  update_sub.rs
src/domain/category/usecase/: create_base.rs  create_sub.rs  delete_base.rs  delete_sub.rs  mod.rs  read_base.rs  read_sub.rs  update_base.rs  update_sub.rs
src/domain/connect/: entity.rs  mod.rs  route.rs
src/domain/connect/dto/: request.rs
src/domain/connect/handler/: create.rs  mod.rs  read.rs
src/domain/connect/repository/: get.rs  mod.rs  save.rs
src/domain/connect/usecase/: create.rs  mod.rs  read.rs
src/domain/image/: entity.rs  mod.rs  route.rs
src/domain/image/dto/: request.rs  response.rs
src/domain/image/handler/: create.rs  mod.rs  read.rs
src/domain/image/repository/: get_by_id.rs  mod.rs  save.rs
src/domain/image/usecase/: create.rs  (+1 more)
src/domain/record/: entity.rs  mod.rs  route.rs
src/domain/user/: entity.rs  mod.rs  route.rs  util.rs
src/global/: constants.rs  errors.rs  utils.rs
src/middleware/: auth.rs
(+44 files in other folders)
