[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }

dotenv = "0.15"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tower = { version = "0.5.0", features = ["full"] }

http-body-util = "0.1.0"
hyper = { version = "1.0.0", features = ["full"] }

[dev-dependencies]
mockall = "0.13.0"