[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

dotenv = "0.15"

sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
argon2 = "0.5"

tower = { version = "0.5.0", features = ["full"] }
hyper = { version = "1.0.0", features = ["full"] }
http-body-util = "0.1.0"

anyhow = "1.0"

[dev-dependencies]
mockall = "0.13.0"