[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

dotenv = "0.15"

sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9"
axum-extra = { version = "0.9", features = ["cookie"] }
url = "2"

chrono = { version = "0.4", features = ["serde"] }
regex = "1"
argon2 = "0.5"

tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
hyper = { version = "1.0.0", features = ["full"] }
http-body-util = "0.1.0"

rust-s3 = "0.35"
uuid = {version = "1.10", features = ["v4"]}

anyhow = "1.0"

[dev-dependencies]
mockall = "0.13.0"